Live text input with vue

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,14 @@
   <link rel="stylesheet" href="/app.css">
 </head>
 <body>
-  <script src="/app.js" charset="utf-8"></script>
+
+  <!-- Vue's boundary within the html file -->
+  <div class="app">
+
+  </div>
+
+  <script src="/app.js" charset="utf-8">
+
+  </script>
 </body>
 </html>
